.gitignore and requirements ready for review

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,16 @@
 planning-questions.md
 dependencies/**
 rotater.py
-**pycache**
-venv
+temp/
+**/.vscode/
+**/*.pyc
+**/.vscode
+**/*_cache
+**/*pycache
+*coverage*
+venv/
+*.zip
+**/.terraform*
+terraform/init.sh
+*.tfstate*
+.env
