--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,35 @@
-bandit==1.7.9
-black==24.4.2
+annotated-types==0.7.0
+asn1crypto==1.5.1
 boto3==1.34.88
 botocore==1.34.88
-coverage==7.4.4
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+coverage==7.6.7
+cryptography==43.0.3
+idna==3.10
+iniconfig==2.0.0
+Jinja2==3.1.4
+jmespath==1.0.1
+MarkupSafe==3.0.2
 moto==5.0.11
+packaging==24.2
 pg8000==1.30.3
+pluggy==1.5.0
+pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
 pytest==8.1.1
 pytest-cov==5.0.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
-safety==3.2.4
+PyYAML==6.0.2
+requests==2.32.3
+responses==0.25.3
+s3transfer==0.10.4
+scramp==1.4.5
+six==1.16.0
+typing_extensions==4.12.2
+urllib3==2.2.3
+Werkzeug==3.1.3
+xmltodict==0.14.2
