--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,7 @@ typing_extensions==4.12.2
 urllib3==2.2.3
 Werkzeug==3.1.3
 xmltodict==0.14.2
+pytz==2024.2
+pandas==2.2.3
+numpy==2.1.3
+tzdata==2024.2
