--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,5 @@
-annotated-types==0.7.0
-asn1crypto==1.5.1
-boto3==1.34.88
-botocore==1.34.88
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.4.0
-coverage==7.6.7
-cryptography==43.0.3
-distlib==0.3.9
-filelock==3.12.2
-idna==3.10
-iniconfig==2.0.0
-Jinja2==3.1.4
-jmespath==1.0.1
-MarkupSafe==3.0.2
-moto==5.0.11
-numpy==2.1.3
-packaging==24.2
-pandas==2.2.3
-pbr==6.1.0
-pg8000==1.30.3
-platformdirs==4.3.6
-pluggy==1.5.0
-pyarrow==18.0.0
-pycparser==2.22
-pydantic==2.8.2
-pydantic_core==2.20.1
-pytest==8.1.1
-pytest-cov==5.0.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
-pytz==2024.2
-PyYAML==6.0.2
-requests==2.32.3
-responses==0.25.3
-s3transfer==0.10.4
-scramp==1.4.5
-six==1.16.0
-stevedore==5.4.0
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
-virtualenv==20.27.1
-virtualenv-clone==0.5.7
-virtualenvwrapper==6.1.1
-Werkzeug==3.1.3
-xmltodict==0.14.2
-pytz==2024.2
-pandas==2.2.3
-numpy==2.1.3
-tzdata==2024.2
-babel==2.16.0
+boto3
+pg8000
+babel
+pandas
+pyarrow
